--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-leap-day
+title: Welcome to Julen Urain's Learning Blog
+description: Posting in order to remember in the future
