--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,11 @@
 title: Julen Urain's Homepage
 email: julen@robot-learning.de
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
+  Julen Urain's website. I try to talk about Robotics, Learning and control.
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: theCamusean
+github_username:  TheCamusean
 
 # Build settings
 markdown: kramdown
